--- a/src/main/resources/templates/create-order.html
+++ b/src/main/resources/templates/create-order.html
@@ -36,7 +36,7 @@
           <a href="/orders" class="nav-link"><span class="text-custom">TJÄNSTER </span> </a>
         </li>
         <li class="nav-item" >
-          <a href="#offerlist" class="nav-link"><span class="text-custom">LOGGA IN </span></a>
+          <a href="#offerlist" class="nav-link"><span class="text-custom">LOGGA UT </span></a>
         </li>
       </ul>
     </div>
