--- a/src/main/resources/templates/my-page.html
+++ b/src/main/resources/templates/my-page.html
@@ -43,7 +43,7 @@
         </div>
     </div>
 </nav>
-<h1 th:text="'Välkommen ' + ${session.user.firstName} + '!'" class ="text-center"> My Page</h1>
+<h1 th:text="'Välkommen ' + ${session.user.firstName} + '!'" class ="text-center"> </h1>
 </div>
 <div>
     <img src="icon_my_page.JPG"
