--- a/src/main/resources/templates/order-confirm.html
+++ b/src/main/resources/templates/order-confirm.html
@@ -51,7 +51,7 @@
 </div>
 
 <div class="col-auto text-center text-custom">
-    <span onclick="history.go(-2)" class="btn btn-secondary mb-3">Hem</span>
+    <span onclick="history.go(-2)" class="btn btn-secondary mb-3">Mina Sidor</span>
 </div>
 
 <footer class="p-5 navbar-custom text-white text-center position-relative">
