--- a/src/main/resources/templates/trejdInfo.html
+++ b/src/main/resources/templates/trejdInfo.html
@@ -30,19 +30,21 @@
                     <a href="/orders" class="nav-link"><span class="text-custom">TJÄNSTER </span> </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/" class="nav-link"><span class="text-custom">LOGGA IN </span></a>
+                    <a href="/" class="nav-link"><span class="text-custom">LOGGA UT </span></a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
 
+
+
 <div th:if="${writtenByPerformer}" >
-    <h3 th:text="'Hej ' + ${session.firstname} + '! Hoppas du är nöjd med ditt senaste arbete. Betygsätt denna Trejd:'"></h3>
+    <h3 th:text="'Hej ' + ${session.user.firstName} + '! Hoppas du är nöjd med ditt senaste arbete. Betygsätt denna Trejd:'"></h3>
 </div>
 
 <div th:unless="${writtenByPerformer}" >
-    <h3 th:text="'Hej ' + ${session.firstname} + '! Hoppas du är nöjd med det arbete som utfördes hos dig. Betygsätt denna Trejd:'"></h3>
+    <h3 th:text="'Hej ' + ${session.user.firstName} + '! Hoppas du är nöjd med det arbete som utfördes hos dig. Betygsätt denna Trejd:'"></h3>
 </div>
 
 
