Added logout buttons

--- a/src/main/resources/templates/create-order.html
+++ b/src/main/resources/templates/create-order.html
@@ -38,14 +38,14 @@
           <a href="/orders" class="nav-link"><span class="text-custom">TJÄNSTER </span> </a>
         </li>
         <li class="nav-item" >
-          <a href="#offerlist" class="nav-link"><span class="text-custom">LOGGA IN </span></a>
+          <a href="/" class="nav-link"><span class="text-custom">LOGGA UT </span></a>
         </li>
       </ul>
     </div>
     </div>
 </nav>
 <section>
-<h1 class ="text-center"> Create Order</h1>
+<h1 class ="text-center"> Skapa Order</h1>
 </div>
 <div th:if="${performer}!=null">
   <img src="/order_icon_set.JPG" style="height:150px" class="center">
