--- a/src/main/resources/templates/order-confirm.html
+++ b/src/main/resources/templates/order-confirm.html
@@ -28,7 +28,7 @@
                     <a href="#trejd" class="nav-link"><span class="text-custom">TJÄNSTER </span> </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/logout" class="nav-link"><span class="text-custom">LOGGA UT </span></a>
+                    <a href="/" class="nav-link"><span class="text-custom">LOGGA UT </span></a>
                 </li>
             </ul>
         </div>
