--- a/src/main/resources/templates/updateuserinfo.html
+++ b/src/main/resources/templates/updateuserinfo.html
@@ -30,7 +30,7 @@
                     <a href="/orders" class="nav-link"><span class="text-custom">TJÄNSTER </span> </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/" class="nav-link"><span class="text-custom">LOGGA IN </span></a>
+                    <a href="/" class="nav-link"><span class="text-custom">LOGGA UT </span></a>
                 </li>
             </ul>
         </div>
