--- a/src/main/resources/templates/create-user.html
+++ b/src/main/resources/templates/create-user.html
@@ -16,13 +16,13 @@
 </head>
 
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark py-3 navbar-custom text-custom">
+
+<nav class="navbar navbar-expand-lg navbar-dark py-3 navbar-custom">
     <div class="container">
-        <a href="">
-            <img src="/logo.png" alt="logo" width="200px" height="auto">
-        </a>
+        <img src="/logo.png" alt="logo" width="200px" height="auto">
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon "></span>
         </button>
         <div class="collapse navbar-collapse" id="navmenu">
             <ul class="navbar-nav ms-auto">
@@ -33,12 +33,13 @@
                     <a href="/orders" class="nav-link"><span class="text-custom">TJÄNSTER </span> </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/" class="nav-link"><span class="text-custom">LOGGA UT </span></a>
+                    <a href="/" class="nav-link"><span class="text-custom">LOGGA IN </span></a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
+
 </div>
 </div>
 <section>
