--- a/src/main/resources/templates/info.html
+++ b/src/main/resources/templates/info.html
@@ -44,24 +44,24 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-sm-3">
-            <h3>Steg 1: Vad kan du göra?</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+            <h3 class = "text-custom">Steg 1: Välj dina skills?</h3>
+            <p class="text-custom_two" >Vad kan du fixa åt någon annan? </p>
+            <p class="text-custom_two" >Du kan kanske tänka dig att klippa gräset eller sätta ihop Ikea möbler?</p>
         </div>
         <div class="col-sm-3">
-            <h3>Steg 2: Vad behöver du hjälp med?</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+            <h3 class = "text-custom">Steg 2: Vad behöver du hjälp med?</h3>
+            <p class="text-custom_two" >Behöver du hjälp med att bygga en vägg? </p>
+            <p class="text-custom_two" >Eller ska du åka till Arlanda på fredag och har inte tillgång till egen bil? </p>
         </div>
         <div class="col-sm-3">
-            <h3>Steg 3: Hitta en öppen Trejd!</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+            <h3 class = "text-custom">Steg 3: Hitta en öppen Trejd!</h3>
+            <p class="text-custom_two" >Börja byta tjänster med andra trejdare i ditt område</p>
+            <p class="text-custom_two" >Och börja byta tid mot tid!</p>
         </div>
         <div class="col-sm-3">
-            <h3>Steg 4: Börja Trejda!</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+            <h3 class = "text-custom">Steg 4: Börja Trejda!</h3>
+            <p class="text-custom_two" >Lycka till!</p>
+
         </div>
     </div>
 </div>
