--- a/src/main/resources/templates/tack.html
+++ b/src/main/resources/templates/tack.html
@@ -41,16 +41,11 @@
     <p class="display 2">Lycka till med ditt fortsatta trejdande!</p>
 </div>
 
-<div class="container mt-5 text-custom">
-    <div class="row">
-        <div class="col-sm-12">
-            <h3>Ha en fin dag!</h3>
-            <p>Kompis</p>
+<div class="container mt-5 text-custom text-center">
+
+        <div class="col-auto text-custom text-center">
+            <span onclick="history.go(-7)" class="btn btn-secondary mb-3">Back</span>
         </div>
-        <div class="col-auto text-center text-custom">
-            <span onclick="history.back()" class="btn btn-secondary mb-3">Back</span>
-        </div>
-    </div>
 </div>
 
 </div>
