--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -28,13 +28,13 @@
         <div class="collapse navbar-collapse" id="navmenu">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item ">
-                    <a href="/info" class="nav-link"> <span class="text-custom">SÅ FUNKAR DET </span> </a>
+                    <a href="/info" class="nav-link"> <span class="text-custom_white">SÅ FUNKAR DET </span> </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/orders" class="nav-link"><span class="text-custom">TJÄNSTER </span> </a>
+                    <a href="/orders" class="nav-link"><span class="text-custom_white">TJÄNSTER </span> </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/" class="nav-link"><span class="text-custom">LOGGA IN </span></a>
+                    <a href="/" class="nav-link"><span class="text-custom_white">LOGGA IN </span></a>
                 </li>
             </ul>
         </div>
@@ -109,13 +109,13 @@
 
 <!-- new part / frequesntly asked questions-->
 <section id="question" class="p-5 mt-3">
-    <div class="container">
-        <h2 class="text-center mb-4">Vanliga Frågor</h2>
-        <div class="accordion accordion-flush" id="questions">
+    <div class="container text-custom ">
+        <h2 class="mb-4">Vanliga Frågor</h2>
+        <div class="accordion accordion-flush text center" id="questions">
             <!--Item 1-->
-            <div class="accordion-item">
+            <div class="accordion-item text center">
                 <h2 class="accordion-header">
-                    <button class="accordion-button collapsed"
+                    <button class="accordion-button collapsed text center"
                             type="button"
                             data-bs-toggle="collapse"
                             data-bs-target="#question-one">
