--- a/src/main/resources/templates/updateuserinfo.html
+++ b/src/main/resources/templates/updateuserinfo.html
@@ -26,13 +26,13 @@
         <div class="collapse navbar-collapse" id="navmenu">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item ">
-                    <a href="/info" class="nav-link"> <span class="text-custom">SÅ FUNKAR DET </span> </a>
+                    <a href="/info" class="nav-link"> <span class="text-custom_white">SÅ FUNKAR DET </span> </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/orders" class="nav-link"><span class="text-custom">TJÄNSTER </span> </a>
+                    <a href="/orders" class="nav-link"><span class="text-custom_white">TJÄNSTER </span> </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/" class="nav-link"><span class="text-custom">LOGGA UT </span></a>
+                    <a href="/" class="nav-link"><span class="text-custom_white">LOGGA UT </span></a>
                 </li>
             </ul>
         </div>
