--- a/src/main/resources/templates/order-confirm.html
+++ b/src/main/resources/templates/order-confirm.html
@@ -44,11 +44,10 @@
     <p class="display 2">En utövare kontaktar dig snarast!</p>
 </div>
 
-<div class="container mt-5 text-custom">
+<div class="container mt-5 text-custom text-center">
     <div class="row">
         <div class="col-sm-12">
-            <h3>Ha en fin dag!</h3>
-            <p>Kompis</p>
+            <h3>Ha en fin dag, kompis!</h3>
         </div>
 
     </div>
