--- a/src/main/resources/templates/trejdInfo.html
+++ b/src/main/resources/templates/trejdInfo.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/starstest.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
@@ -41,12 +41,12 @@
         </div>
     </div>
 </nav>
-
-<div th:if="${writtenByPerformer}" >
+<section class="text-center">
+<div th:if="${writtenByPerformer}" class="text-custom">
     <h3 th:text="'Hej ' + ${session.user.firstName}+'! Hoppas du är nöjd med ditt senaste arbete. Betygsätt denna Trejd:'"></h3>
 </div>
 
-<div th:unless="${writtenByPerformer}" >
+<div th:unless="${writtenByPerformer}" class="text-custom" >
     <h3 th:text="'Hej ' + ${session.user.firstName}+'! Hoppas du är nöjd med det arbete som utfördes hos dig. Betygsätt denna Trejd:'"></h3>
 </div>
 
@@ -56,7 +56,6 @@
 
 
     <form method="post" th:action="'/trejdInfo/' + ${trejd.id} + '/addReview/'">
-        <h3>Rating: </h3>
         <article class="movie">
 
             <div class="rating">
@@ -78,21 +77,16 @@
         <input type="hidden" id="rating" name="rating"/>
 
         <div class="mb-3">
-            <textarea name="description" class="form-control-lg form-control" id="exampleFormControlTextarea1"
+            <textarea name="description" class="form-control-lg form-control text-custom" id="exampleFormControlTextarea1"
                       rows="3"
                       placeholder="Review"></textarea>
         </div>
-        <input type="submit" value="Submit review" id="review-button" class="btn btn-dark">
+        <input type="submit" value="Submit review" id="review-button" class="btn btn-secondary text-custom mb-3">
     </form>
 
 </div>
+</section>
 
-</style>
-<!--
-<div class="col-auto text-center text-custom">
-    <span onclick="history.back()" class="btn btn-secondary mb-3">Back</span>
-</div>
--->
 <footer class="p-5 navbar-custom text-white text-center position-relative">
     <div class="container">
         <p class="lead"> Copyright &copy; 2022 Trejd</p>
