your not able to se your own orders

--- a/src/main/resources/templates/tack.html
+++ b/src/main/resources/templates/tack.html
@@ -29,7 +29,7 @@
                     <a href="/orders" class="nav-link"><span class="text-custom_white">TJÄNSTER </span> </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/" class="nav-link"><span class="text-custom_white">LOGGA IN </span></a>
+                    <a href="/" class="nav-link"><span class="text-custom_white">LOGGA UT </span></a>
                 </li>
             </ul>
         </div>
@@ -44,7 +44,7 @@
 <div class="container mt-5 text-custom text-center">
 
         <div class="col-auto text-custom text-center">
-            <span onclick="history.go(-7)" class="btn btn-secondary mb-3">Back</span>
+            <span onclick="history.go(-7)" class="btn btn-secondary mb-3">Hem</span>
         </div>
 </div>
 
