--- a/src/main/resources/templates/trejdInfo.html
+++ b/src/main/resources/templates/trejdInfo.html
@@ -46,7 +46,7 @@
     <h3 th:text="'Hej ' + ${session.user.firstName}+'! Hoppas du är nöjd med ditt senaste arbete. Betygsätt denna Trejd:'"></h3>
 </div>
 
-<div th:unless="${writtenByPerformer}" class="text-custom" >
+<div th:unless="${writtenByPerformer}" >
     <h3 th:text="'Hej ' + ${session.user.firstName}+'! Hoppas du är nöjd med det arbete som utfördes hos dig. Betygsätt denna Trejd:'"></h3>
 </div>
 
@@ -56,6 +56,7 @@
 
 
     <form method="post" th:action="'/trejdInfo/' + ${trejd.id} + '/addReview/'">
+        <h3>Rating: </h3>
         <article class="movie">
 
             <div class="rating">
@@ -77,11 +78,11 @@
         <input type="hidden" id="rating" name="rating"/>
 
         <div class="mb-3">
-            <textarea name="description" class="form-control-lg form-control text-custom" id="exampleFormControlTextarea1"
+            <textarea name="description" class="form-control-lg form-control" id="exampleFormControlTextarea1"
                       rows="3"
                       placeholder="Review"></textarea>
         </div>
-        <input type="submit" value="Submit review" id="review-button" class="btn btn-secondary text-custom mb-3">
+        <input type="submit" value="Submit review" id="review-button" class="btn btn-secondary">
     </form>
 
 </div>
