--- a/src/main/resources/templates/tack.html
+++ b/src/main/resources/templates/tack.html
@@ -44,7 +44,7 @@
 <div class="container mt-5 text-custom text-center">
 
         <div class="col-auto text-custom text-center">
-            <span onclick="history.go(-7)" class="btn btn-secondary mb-3">Back</span>
+            <span onclick="history.go(-7)" class="btn btn-secondary mb-3">Home</span>
         </div>
 </div>
 
