--- a/src/main/resources/templates/info.html
+++ b/src/main/resources/templates/info.html
@@ -70,7 +70,7 @@
 
 </section>
 <div class="col-auto text-center text-custom">
-    <span onclick="history.back()" class="btn btn-secondary mb-3">Back</span>
+    <span onclick="history.back()" class="btn btn-secondary mb-3">Tillbaka</span>
 </div>
 <section>
     <footer class="p-5 navbar-custom text-white text-center position-relative">
