--- a/src/main/resources/templates/maketrejd.html
+++ b/src/main/resources/templates/maketrejd.html
@@ -110,7 +110,7 @@
         <p th:text="${review.rating} + ' poäng'"></p>
     </div>
         <div class="col-auto text-center text-custom">
-            <span onclick="history.back()" class="btn btn-secondary mb-3">Back</span>
+            <span onclick="history.back()" class="btn btn-secondary mb-3">Tillbaka</span>
         </div>
 </div>
 </div>
