--- a/src/main/resources/templates/trejdInfo.html
+++ b/src/main/resources/templates/trejdInfo.html
@@ -80,9 +80,9 @@
         <div class="mb-3">
             <textarea name="description" class="form-control-lg form-control" id="exampleFormControlTextarea1"
                       rows="3"
-                      placeholder="Review"></textarea>
+                      placeholder="Recension"></textarea>
         </div>
-        <input type="submit" value="Submit review" id="review-button" class="btn btn-secondary">
+        <input type="submit" value="Skicka in din recension" id="review-button" class="btn btn-secondary">
     </form>
 
 </div>
