--- a/src/main/resources/templates/viewOfferList.html
+++ b/src/main/resources/templates/viewOfferList.html
@@ -73,7 +73,7 @@
 
 
 <div class="col-auto text-center text-custom">
-    <span th:if="${isFiltered!=true}" onclick="history.back()" class="btn btn-secondary mb-3">Back</span>
+    <span th:if="${isFiltered!=true}" onclick="history.back()" class="btn btn-secondary mb-3">Tillbaka</span>
     <span th:if="${isFiltered==true}" onclick="history.go(-2)" class="btn btn-secondary mb-3">Back</span>
 </div>
 
