--- a/src/main/resources/templates/viewPerformers.html
+++ b/src/main/resources/templates/viewPerformers.html
@@ -77,8 +77,8 @@
 
   </div>
     <div class="text-center text-custom">
-        <span th:if="${isFiltered!=true}" onclick="history.back()" class="btn btn-secondary mb-3">Back</span>
-        <span th:if="${isFiltered==true}" onclick="history.go(-2)" class="btn btn-secondary mb-3">Back</span>
+        <span th:if="${isFiltered!=true}" onclick="history.back()" class="btn btn-secondary mb-3">Tillbaka</span>
+        <span th:if="${isFiltered==true}" onclick="history.go(-2)" class="btn btn-secondary mb-3">TIllbaka</span>
     </div>
     </div>
 </section>
