--- a/src/main/resources/templates/trejdInfo.html
+++ b/src/main/resources/templates/trejdInfo.html
@@ -82,7 +82,7 @@
                       rows="3"
                       placeholder="Recension"></textarea>
         </div>
-        <input type="submit" value="Skicka in din recension" id="review-button" class="btn btn-secondary">
+        <input type="submit" value="Skicka Recension" id="review-button" class="btn btn-secondary">
     </form>
 
 </div>
